:snowman_with_snow: Add word-wrap mixin to stop long links breaking

--- a/assets/scss/partials/_elements.scss
+++ b/assets/scss/partials/_elements.scss
@@ -29,6 +29,7 @@ pre code {
 
 a {
   color: $color-link;
+  @include word-wrap;
 
   &:hover {
     background-color: $color-link-hover-background;
